Removed usages of sun.misc.BASE64